Name:           DNP
Version:        1.0
Cabal-Version:	>= 1.2.3
Copyright:      Copyright (c) 2011 Brown University
License:        BSD3
License-file:   LICENSE
Author:         Andrew Ferguson, Arjun Guha
Maintainer:     Andrew Ferguson <adf@cs.brown.edu>
Homepage:       http://www.cs.brown.edu/~adf/
Stability:      provisional
Category:       Language
Build-Type:     Simple
Synopsis:       Dynamic Network-wide Policies
Description:

	Dynamic Network-wide Policies	

Executable dnp
  Main-Is: Main.hs
  Hs-Source-Dirs:
    src
  Extensions:
    NoMonomorphismRestriction
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 1.1.0.1,
    parsec >= 3 && < 3.2.0,
    pretty >= 0.1,
    containers >= 0.1,
    syb >= 0.1,
    network >= 2.3,
    bytestring,
    transformers <= 0.3,
    HUnit >= 1.2.2.3 && < 1.3
  ghc-options:
    -fwarn-incomplete-patterns
