Name:           PANE
Version:        1.0
Cabal-Version:	>= 1.2.3
Copyright:      Copyright (c) 2011--2012 Brown University
License:        BSD3
License-file:   LICENSE
Author:         Andrew Ferguson, Arjun Guha
Maintainer:     Andrew Ferguson <adf@cs.brown.edu>
Homepage:       http://pane.cs.brown.edu
Stability:      experimental
Category:       Language
Build-Type:     Simple
Synopsis:       PANE: an implementation of Participatory Networking
Description:    PANE: an implementation of Participatory Networking

Test-Suite unittest
  Hs-Source-Dirs: src
  Type: exitcode-stdio-1.0
  Main-Is: UnitTest.hs
  Build-Depends:
    base >= 4 && < 5, mtl, containers, HUnit
  Extensions:
    TemplateHaskell
  ghc-options:
    -fwarn-incomplete-patterns
    -with-rtsopts=-T
    -threaded
    -feager-blackholing
    -O2

Executable pane
  Main-Is: Main.hs
  Hs-Source-Dirs:
    src
  Extensions:
    TemplateHaskell
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 1.1.0.1,
    parsec >= 3 && < 3.2.0,
    pretty >= 0.1,
    containers >= 0.1,
    syb >= 0.1,
    network >= 2.3,
    bytestring,
    transformers <= 0.3.0.1,
    HUnit >= 1.2.2.3 && < 1.3,
    nettle-openflow,
    old-time,
    HList,
    process,
    ConfigFile,
    hslogger >= 1.2.0,
    hslogger-template >= 2.0.1,
    ekg
  ghc-options:
    -fwarn-incomplete-patterns
    -with-rtsopts=-T
    -threaded
    -feager-blackholing
    -O2
